<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		<include layout="@layout/project_dialog_header"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:enabled="false"
                android:text="@string/dialog_new_project_name" />

            <EditText
                android:id="@+id/dialog_new_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="16dp"
                android:hint="@string/dialog_new_project_name_hint"
                android:inputType="text" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:enabled="false"
                android:text="@string/dialog_new_project_description" />

            <EditText
                android:id="@+id/dialog_new_project_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:hint="@string/dialog_new_project_description_hint"
                android:inputType="textMultiLine"
                android:minLines="2" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="64dp" >

            <Button
                android:id="@+id/dialog_new_project_cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.65"
                android:text="@string/dialog_project_cancel_button" />

            <Button
                android:id="@+id/dialog_project_add_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.65"
                android:text="@string/dialog_project_add_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>