<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/telegram_list_selector"
>
    
    <TableRow
        android:id="@+id/telegram_item_table_row" 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >
	    <ImageView 
	    	android:id="@+id/telegram_item_priority_image"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:contentDescription="@string/telegrams_item_image_description"
	    	android:src="@drawable/knx_logo"
	    />
	    
	    <RelativeLayout
	        android:id="@+id/telegram_item_labels"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0"
	        android:layout_margin="5dip" 
		>
	
		    <TextView           
		        android:id="@+id/telegram_item_from_label"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/telegrams_item_from_label"
		        android:textStyle="italic"
		    />
		    
		    <TextView           
		        android:id="@+id/telegram_item_to_label"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/telegram_item_from_label"
		        android:text="@string/telegrams_item_to_label"
		        android:textStyle="italic"
		    />
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:id="@+id/telegram_item_priority_addresses"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
			android:layout_weight="2"
			android:layout_margin="5dip"
	    >
		    <TextView           
		        android:id="@+id/telegram_item_from"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		    />
		    
		    <TextView           
		        android:id="@+id/telegram_item_to"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/telegram_item_from"
		        android:textStyle="bold"
		    />
	    </RelativeLayout>
	    
	    <TextView           
	        android:id="@+id/telegram_item_value"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_margin="5dip"
			android:gravity="center"
			android:minLines="2"
	        android:textStyle="bold|italic"
	    />
    </TableRow>
</TableLayout>